--- a/ElectronicLibrary.Persistance/ElectronicLibrary.Persistance.csproj
+++ b/ElectronicLibrary.Persistance/ElectronicLibrary.Persistance.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ElectronicLibrary.Domain\ElectronicLibrary.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
