--- a/ElectronicLibrary.Application/ElectronicLibrary.Application.csproj
+++ b/ElectronicLibrary.Application/ElectronicLibrary.Application.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="OperationData\Base\DeleteCommand\" />
+    <Folder Include="OperationData\Base\GetAllQuery\" />
   </ItemGroup>
 
 </Project>
