Removed generic CQRS, generic base repository added, Entities changed for ROOM RESERVATION

--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -8,5 +8,11 @@
   },
   "ConnectionStrings": {
     "Library": "Server=(localdb)\\LocalDB;Database=Librarydb; Trusted_Connection=True;"
+  },
+  "FileConfiguration": {
+    "UploadPath": ""
+  },
+  "CorsConfiguration": {
+    "AllowedHosts": ""
   }
 }
