--- a/ElectronicLibrary.Persistance/ElectronicLibrary.Persistance.csproj
+++ b/ElectronicLibrary.Persistance/ElectronicLibrary.Persistance.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -22,6 +22,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ElectronicLibrary.Domain\ElectronicLibrary.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
