--- a/ElectronicLibrary.Api/ElectronicLibrary.Api.csproj
+++ b/ElectronicLibrary.Api/ElectronicLibrary.Api.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="FluentValidation" Version="11.1.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
@@ -19,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ElectronicLibrary.Application\ElectronicLibrary.Application.csproj" />
     <ProjectReference Include="..\ElectronicLibrary.Infrastructure\ElectronicLibrary.Infrastructure.csproj" />
     <ProjectReference Include="..\ElectronicLibrary.Persistance\ElectronicLibrary.Persistance.csproj" />
   </ItemGroup>
