Refactor, DecorationRepository added

--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -10,7 +10,7 @@
     "Library": "Server=(localdb)\\LocalDB;Database=Librarydb; Trusted_Connection=True;"
   },
   "FileConfiguration": {
-    "UploadPath": ""
+    "UploadPath": "C:\\Programowanie\\Uploads"
   },
   "CorsConfiguration": {
     "AllowedHosts": ""
