All Dictionary entities CQRS
Added support for all dicrionary entities, early handling for booking add

--- a/ElectronicLibrary.Application/ElectronicLibrary.Application.csproj
+++ b/ElectronicLibrary.Application/ElectronicLibrary.Application.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="CQRS\Booking\Queries\" />
     <Folder Include="CQRS\Room\Queries\" />
   </ItemGroup>
 
