Added FileContoller, GetRoomList

--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -10,7 +10,8 @@
     "Library": "Server=(localdb)\\LocalDB;Database=Librarydb; Trusted_Connection=True;"
   },
   "FileConfiguration": {
-    "UploadPath": "C:\\Programowanie\\Uploads"
+    "UploadPath": "C:\\Programowanie\\Uploads",
+    "FileControllerAddress": "" //nie zapomnij dodac id={0}!
   },
   "CorsConfiguration": {
     "AllowedHosts": ""
