--- a/ElectronicLibrary.Application/ElectronicLibrary.Application.csproj
+++ b/ElectronicLibrary.Application/ElectronicLibrary.Application.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <Folder Include="CQRS\Booking\Queries\" />
-    <Folder Include="CQRS\Room\Queries\" />
+    <Folder Include="CQRS\File\Commands\" />
   </ItemGroup>
 
 </Project>
