Rename refactor, jwt login and register actions added

--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -7,13 +7,18 @@
     }
   },
   "ConnectionStrings": {
-    "Library": "Server=(localdb)\\LocalDB;Database=Librarydb; Trusted_Connection=True;"
+    "Library": "Server=(localdb)\\Elrond;Database=Test; Trusted_Connection=True;"
   },
   "FileConfiguration": {
     "UploadPath": "C:\\Programowanie\\Uploads",
-    "FileControllerAddress": "" //nie zapomnij dodac id={0}!
+    "FileControllerAddress": "http://localhost:49841/{0}"
   },
   "CorsConfiguration": {
-    "AllowedHosts": ""
+    "AllowedHosts": [ "*" ]
+  },
+  "JWTConfiguration": {
+    "Issuer": "BookingSystemClient",
+    "Audience": "BookingSystemApi",
+    "SecretKey": "gRzeGoRZFloRydDa"
   }
 }
