--- a/ElectronicLibrary.Api/ElectronicBookingSystem.Api.csproj
+++ b/ElectronicLibrary.Api/ElectronicBookingSystem.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -9,6 +9,8 @@
     <PackageReference Include="FluentValidation" Version="11.1.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.17" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
       <PrivateAssets>all</PrivateAssets>
@@ -20,9 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ElectronicLibrary.Application\ElectronicLibrary.Application.csproj" />
-    <ProjectReference Include="..\ElectronicLibrary.Infrastructure\ElectronicLibrary.Infrastructure.csproj" />
-    <ProjectReference Include="..\ElectronicLibrary.Persistance\ElectronicLibrary.Persistance.csproj" />
+    <ProjectReference Include="..\ElectronicLibrary.Application\ElectronicBookingSystem.Application.csproj" />
+    <ProjectReference Include="..\ElectronicLibrary.Infrastructure\ElectronicBookingSystem.Infrastructure.csproj" />
+    <ProjectReference Include="..\ElectronicLibrary.Persistance\ElectronicBookingSystem.Persistance.csproj" />
   </ItemGroup>
 
 </Project>
