--- a/ElectronicLibrary.Application/ElectronicBookingSystem.Application.csproj
+++ b/ElectronicLibrary.Application/ElectronicBookingSystem.Application.csproj
@@ -14,9 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ElectronicLibrary.Domain\ElectronicLibrary.Domain.csproj" />
-    <ProjectReference Include="..\ElectronicLibrary.Infrastructure\ElectronicLibrary.Infrastructure.csproj" />
-    <ProjectReference Include="..\ElectronicLibrary.Persistance\ElectronicLibrary.Persistance.csproj" />
+    <ProjectReference Include="..\ElectronicLibrary.Domain\ElectronicBookingSystem.Domain.csproj" />
+    <ProjectReference Include="..\ElectronicLibrary.Infrastructure\ElectronicBookingSystem.Infrastructure.csproj" />
+    <ProjectReference Include="..\ElectronicLibrary.Persistance\ElectronicBookingSystem.Persistance.csproj" />
   </ItemGroup>
 
   <ItemGroup>
