--- a/ElectronicLibrary.Infrastructure/ElectronicBookingSystem.Infrastructure.csproj
+++ b/ElectronicLibrary.Infrastructure/ElectronicBookingSystem.Infrastructure.csproj
@@ -15,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ElectronicLibrary.Domain\ElectronicLibrary.Domain.csproj" />
-    <ProjectReference Include="..\ElectronicLibrary.Persistance\ElectronicLibrary.Persistance.csproj" />
+    <ProjectReference Include="..\ElectronicLibrary.Domain\ElectronicBookingSystem.Domain.csproj" />
+    <ProjectReference Include="..\ElectronicLibrary.Persistance\ElectronicBookingSystem.Persistance.csproj" />
   </ItemGroup>
 
 </Project>
