Authorize, get user data

--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -11,7 +11,7 @@
   },
   "FileConfiguration": {
     "UploadPath": "C:\\Programowanie\\Uploads",
-    "FileControllerAddress": "http://localhost:49841/{0}"
+    "FileControllerAddress": "http://localhost:49841/File/{0}"
   },
   "CorsConfiguration": {
     "AllowedHosts": [ "*" ]
