--- a/ElectronicLibrary.Persistance/ElectronicBookingSystem.Persistance.csproj
+++ b/ElectronicLibrary.Persistance/ElectronicBookingSystem.Persistance.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ElectronicLibrary.Domain\ElectronicBookingSystem.Domain.csproj" />
+    <ProjectReference Include="..\ElectronicLibrary.Infrastructure\ElectronicBookingSystem.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
