--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -14,7 +14,7 @@
     "FileControllerAddress": "http://localhost:49841/File/{0}"
   },
   "CorsConfiguration": {
-    "AllowedHosts": [ "*" ]
+    "AllowedHosts": [ "http://localhost:4200" ]
   },
   "JWTConfiguration": {
     "Issuer": "BookingSystemClient",
