--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Library": "Server=(localdb)\\Elrond;Database=Test; Trusted_Connection=True;"
+    "Library": "Server=(localdb)\\Elrond;Database=TEST_BOOKING; Trusted_Connection=True;"
   },
   "FileConfiguration": {
     "UploadPath": "C:\\Programowanie\\Uploads",
