--- a/ElectronicLibrary.Application/ElectronicBookingSystem.Application.csproj
+++ b/ElectronicLibrary.Application/ElectronicBookingSystem.Application.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="CQRS\Booking\Queries\" />
+    <Folder Include="CQRS\Category\Queries\" />
     <Folder Include="CQRS\File\Commands\" />
   </ItemGroup>
 
