--- a/ElectronicLibrary.Application/ElectronicBookingSystem.Application.csproj
+++ b/ElectronicLibrary.Application/ElectronicBookingSystem.Application.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.1" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,7 +23,6 @@
 
   <ItemGroup>
     <Folder Include="CQRS\Booking\Queries\" />
-    <Folder Include="CQRS\Category\Queries\" />
     <Folder Include="CQRS\File\Commands\" />
   </ItemGroup>
 
