--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -20,5 +20,11 @@
     "Issuer": "BookingSystemClient",
     "Audience": "BookingSystemApi",
     "SecretKey": "gRzeGoRZFloRydDa"
+  },
+  "EmailConfiguration": {
+    "Host": "smtp.gmail.com", 
+    "Username": "r3testpix@gmail.com",
+    "Password": "ehcdoobeqcabbsle", //haslo do aplikacji
+    "Port": 587
   }
 }
