--- a/ElectronicLibrary.Infrastructure/ElectronicBookingSystem.Infrastructure.csproj
+++ b/ElectronicLibrary.Infrastructure/ElectronicBookingSystem.Infrastructure.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="5.2.19" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
