Added Inline HtmlMailMessage service

--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -26,5 +26,8 @@
     "Username": "r3testpix@gmail.com",
     "Password": "ehcdoobeqcabbsle", //haslo do aplikacji
     "Port": 587
+  },
+  "AppData": {
+    "ApplicationAddress": "http://localhost:4200/home"
   }
 }
