--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "Library": "Server=(localdb)\\localdb;Database=TEST_BOOKING; Trusted_Connection=True;"
+    //"Library": "Server=(localdb)\\localdb;Database=TEST_BOOKING; Trusted_Connection=True;",
+    "Library": "Server=(localdb)\\MSSQLLocalDB;Database=TEST_BOOKING; Trusted_Connection=True;"
   },
   "FileConfiguration": {
     "UploadPath": "C:\\Programowanie\\Uploads",
