--- a/ElectronicLibrary.Api/ElectronicBookingSystem.Api.csproj
+++ b/ElectronicLibrary.Api/ElectronicBookingSystem.Api.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'ElectronicLibrary.Api' " />
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="FluentValidation" Version="11.1.0" />
