--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -8,7 +8,8 @@
   },
   "ConnectionStrings": {
     //"Library": "Server=(localdb)\\localdb;Database=TEST_BOOKING; Trusted_Connection=True;",
-    "Library": "Server=(localdb)\\MSSQLLocalDB;Database=TEST_BOOKING; Trusted_Connection=True;"
+    //"Library": "Server=(localdb)\\MSSQLLocalDB;Database=TEST_BOOKING; Trusted_Connection=True;"
+    "Library": "Server=localhost, 1433; Database=TEST_BOOKING; User ID=sa; Password=Pass123$;"
   },
   "FileConfiguration": {
     "UploadPath": "C:\\Programowanie\\Uploads",
