--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -12,7 +12,8 @@
     "Library": "Server=localhost, 1433; Database=TEST_BOOKING; User ID=sa; Password=Pass123$;"
   },
   "FileConfiguration": {
-    "UploadPath": "C:\\Programowanie\\Uploads",
+    //"UploadPath": "C:\\Programowanie\\Uploads",
+    "UploadPath": "/Users/piotrnowek/Documents/Uploads",
     "FileControllerAddress": "http://localhost:49841/File/{0}"
   },
   "CorsConfiguration": {
