--- a/ElectronicLibrary.Api/appsettings.Development.json
+++ b/ElectronicLibrary.Api/appsettings.Development.json
@@ -12,8 +12,8 @@
     "Library": "Server=localhost; Database=TEST_BOOKING; Trusted_Connection=True;"
   },
   "FileConfiguration": {
-    //"UploadPath": "C:\\Programowanie\\Uploads",
-    "UploadPath": "/Users/piotrnowek/Documents/Uploads",
+    "UploadPath": "C:\\Programowanie\\Uploads",
+    //"UploadPath": "/Users/piotrnowek/Documents/Uploads",
     "FileControllerAddress": "http://localhost:49841/File/{0}"
   },
   "CorsConfiguration": {
